laurel_sprout: XiaomiParts: Adapt for Android S
* Use Theme.SubSettingsBase for theme
* Replace PreferenceActivity with CollapsingToolbarBaseActivity
* Add Titles to prefernce screen
* Remove onOptionsItemSelected and where neccessary move to activity
* Set android:exported true for Doze Tile
* Adapt icon for S

W PackageManager: Failed to parse /system/priv-app/XiaomiParts: /system/priv-app/XiaomiParts/XiaomiParts.apk (at Binary XML file line #119): org.lineageos.settings.device.doze.DozeTileService: Targeting S+ (version 31 and above) requires that an explicit value for android:exported be defined when intent filters are present

Co-Authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-Authored-by: Hemant Sachdeva <hemant.evolver@gmail.com>
Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -91,6 +91,7 @@
     <!-- Ambient Display -->
     <string name="ambient_display_xiaomi">Xiaomi Doze</string>
     <string name="advanced_doze_summary">Ambient Display</string>
+    <string name="ambient_enable">Use ambient display</string>
 
     <!-- KCAL -->
     <string name="device_kcal_title">Display Color Calibration</string>
